--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,9 @@ insert_final_newline = true
 charset = utf-8
 
 [*.pgl]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
-[{*.js,Makefile}]
+[*.rs]
 indent_style = tab
 indent_size = 4
