unnecessary rust optimisations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "pgsl"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 pest = "2.5.4"
 pest_derive = "2.5.5"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies, but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
