--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 pest = "2.5.4"
 pest_derive = "2.5.5"
+clap = { version = "4.1.4", features = ["derive"] }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
