--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ pest = "2.5.4"
 pest_derive = "2.5.5"
 clap = { version = "4.1.4", features = ["derive", "env"] }
 dotenv = { version = "0.15.0", features = ["clap"] }
+anyhow = "1.0.69"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
